# SlicerPACSConnector

./: CMakeLists.txt  README.md  SlicerPACSConnector.s4ext
SlicerPACSConnector/: CMakeLists.txt  SlicerPACSConnector.py
SlicerPACSConnector/Resources/UI/: SlicerPACSConnector.ui
